test_cases/fail/f49.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 0)
START IF
    IF (x > 3)
        PRINT: "inner"
    END IF
END IF
END SCRIPT
